- move recommend section higher on restaurant page - fix minor layout issues with restaurant page - refactor menu item section of restaurant show page

--- a/public/style/app.css
+++ b/public/style/app.css
@@ -78,7 +78,7 @@ form textarea {
 }
 
 .rating-btn {
-    max-width: 100px;
+    /* max-width: 100px; */
     display: inline-block;
 }
 
